<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LayoutToast"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ToastActivity">

    <EditText
        android:id="@+id/txtHoriz"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txtHoriz"
        android:inputType="number" />

    <EditText
        android:id="@+id/txtVert"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txtVert"
        android:inputType="textPersonName|number" />

    <EditText
        android:id="@+id/txtToast"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txtToast"
        android:inputType="textPersonName" />

    <RadioGroup
        android:id="@+id/radioGroupHoriz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/txtRadioGroupHoriz"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/txtRadioGroupHoriz" />

        <RadioButton
            android:id="@+id/rbIzquierda"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/radioButtonIzquierda" />

        <RadioButton
            android:id="@+id/radioButtonMedio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/radioButtonMedio" />

        <RadioButton
            android:id="@+id/radioButtonDerecha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/radioButtonDerecha" />
    </RadioGroup>

    <RadioGroup
        android:id="@+id/radioGroupVert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/txtRadioGroupVert"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/txtRadioGroupVert" />

        <RadioButton
            android:id="@+id/radioButtonArriba"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/radioButtonArriba" />

        <RadioButton
            android:id="@+id/radioButtonCentro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/radioButtonCentro" />

        <RadioButton
            android:id="@+id/radioButtonAbajo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/radioButtonAbajo" />
    </RadioGroup>

    <Button
        android:id="@+id/btnMostrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="Mostrar"
        android:text="@string/btnMostrar" />

</LinearLayout>